# Hex-DLC

./: .gitignore  .gitmodules  Bot.hex  CMakeLists.txt  Dockerfile  Hex DLC.sln  README.md  Vagrantfile
Hex DLC/: FileIO.cpp  FileIO.h  GAlgorithm.cpp  GAlgorithm.h  Game.cpp  Game.h  Hex DLC.vcxproj  Hex DLC.vcxproj.filters  MyRandom.cpp  MyRandom.h  Network.cpp  Network.h  Source.cpp  SuperArray.hpp  Vec2.hpp
client/: CMakeLists.txt  Source.cpp
client/src/: CommandLineOptions.cpp  CommandLineOptions.h  Source.cpp
client/test/: CommandLineOptionsClientTest.cpp  CommandLineOptionsTest.cpp
scripts/: installdeps.sh
server/: .Array.h  CMakeLists.txt  FileIO.cpp  FileIO.h  GAlgorithm.cpp  GAlgorithm.h  Game.cpp  Game.h  HexDLC.cpp  HexDLC.h  Logger.h  MyRandom.cpp  Network.cpp  Network.h  Server.cpp  Server.h  Source.cpp  SwapArray.h  Vec2.hpp  WorkerThread.cpp  WorkerThread.h
server/genetics/: GAlgorithm.cpp  GAlgorithm.h  Layer.cpp  Layer.h  Member.cpp  Member.h  Network.h  Neuron.cpp  Neuron.h  Population.cpp  SelectionAlgorithm.h  TournamentSelection.cpp  TournamentSelection.h
server/log/: STDOutLogger.cpp  STDOutLogger.h
server/src/: Game.h  HexDLC.cpp  HexDLC.h  Logger.cpp  MyRandom.h  Server.cpp  Server.h  WorkerThread.cpp  WorkerThread.h
server/src/genetics/: Match.cpp  Match.h  Network.cpp  Network.h  Population.cpp  Population.h  SelectionAlgorithm.h  TournamentSelection.cpp
server/src/util/: Array.h  FileIO.cpp
server/test/: Vec2Test.cpp
server/util/: FileIO.h  SuperArray.hpp  ThreadSafeStack.hpp  Vec2.hpp
src/: FileIO.cpp  GAlgorithm.cpp  GAlgorithm.h  Game.cpp  Game.h  MyRandom.h  Source.cpp  Vec2.hpp
test/: Vec2Test.cpp
